--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "nodemon ./src/server.js",
-    "lint": "./src",
+    "start-dev": "nodemon src/server.js",
+    "lint": "src",
     "migrate": "node-pg-migrate"
   },
   "keywords": [],
