--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "20": "^3.1.9",
     "@hapi/hapi": "^21.3.2",
     "auto-bind": "^3.0.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "joi": "^17.10.1",
     "nanoid": "^3.1.20",
