--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "20": "^3.1.9",
     "@hapi/hapi": "^21.3.2",
+    "@hapi/jwt": "^3.2.0",
     "auto-bind": "^3.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
