--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "dependencies": {
     "20": "^3.1.9",
     "@hapi/hapi": "^21.3.2",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
+    "amqplib": "^0.10.4",
     "auto-bind": "^3.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "joi": "^17.10.1",
     "nanoid": "^3.1.20",
     "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "redis": "^4.6.15"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
